--- a/OMPWebApp/Components/Layout/NavMenu.razor
+++ b/OMPWebApp/Components/Layout/NavMenu.razor
@@ -105,6 +105,10 @@
                         <NavLink style="text-decoration: none;" href="fm_invoiceincome" Match="NavLinkMatch.All">
                             <RadzenPanelMenuItem Text="Income Invoice" Icon="pageview" />
                         </NavLink>
+
+                        <NavLink style="text-decoration: none;" href="fm_invoicecost" Match="NavLinkMatch.All">
+                            <RadzenPanelMenuItem Text="Income Cost" Icon="pageview" />
+                        </NavLink>
                     </RadzenPanelMenuItem>
                 </RadzenPanelMenuItem>
             }
