--- a/OMPWebApp/Components/Pages/FMPages/FMInvoiceIncome.razor
+++ b/OMPWebApp/Components/Pages/FMPages/FMInvoiceIncome.razor
@@ -8,10 +8,10 @@
 @inject ApiConnectionService<InvoiceTaxRateDTO> ApiServiceTax
 @inject AuthorizationService AuthService
 <RadzenCard>
-    <h4>Add New Invoice Income</h4>
+    <h4>Add New Invoice (Income)</h4>
 
     <RadzenTemplateForm Data="@newIncome" TItem="InvoiceIncomeDTO" Submit="@AddInvoiceIncome">
-        
+
         <div class="row mb-3"> 
             <div class="col-md-6"> 
                 <RadzenTextBox @bind-Value="newIncome.Name" Placeholder="Name" Style="width: 100%;" />
@@ -30,33 +30,43 @@
             </div>
             <div class="col-md-3"> 
                 <RadzenDropDown TValue="decimal?" @bind-Value="newIncome.VatTaxRate"
-                                Data="@vatDropdownItems"
-                                TextProperty="Display"
-                                ValueProperty="Rate"
-                                Placeholder="VAT %"
-                                Style="width: 100%;" />
+                Data="@vatDropdownItems"
+                TextProperty="Display"
+                ValueProperty="Rate"
+                Placeholder="VAT %"
+                Style="width: 100%;" />
             </div>
             <div class="col-md-3"> 
                 <RadzenDropDown TValue="int?" @bind-Value="newIncome.CurrencyId"
-                                Data="@currencies"
-                                TextProperty="Code"
-                                ValueProperty="Id"
-                                Placeholder="Currency"
-                                Style="width: 100%;" />
+                Data="@currencies"
+                TextProperty="Code"
+                ValueProperty="Id"
+                Placeholder="Currency"
+                Style="width: 100%;" />
             </div>
         </div>
 
         <div class="row">
-            <div class="col-md-12"> 
-                <RadzenButton Text="Add Invoice" ButtonStyle="ButtonStyle.Primary" Type="Submit" />
+            <div class="col-md-2">
+                <RadzenButton Text="@(isEditMode ? "Edit Invoice" : "Add Invoice")"
+                ButtonStyle="ButtonStyle.Primary"
+                Type="Submit" />
             </div>
+            @if (isEditMode)
+            {
+                <div class="col-md-1">
+                    <RadzenButton Text="Cancel"
+                    ButtonStyle="ButtonStyle.Warning"
+                    Click="@CancelEdit" />
+                </div>
+            }
         </div>
 
     </RadzenTemplateForm>
 </RadzenCard>
 
 <RadzenCard Style="margin-top: 50px">
-    <h3>Invoice Income</h3>
+    <h3>Invoice (Income)</h3>
 
     <RadzenDataGrid TItem="InvoiceIncomeDTO" Data="@invoiceIncomes" AllowPaging="true" AllowFiltering="true" PageSize="10" AllowSorting="true">
         <Columns>
@@ -69,6 +79,29 @@
             <RadzenDataGridColumn TItem="InvoiceIncomeDTO" Property="VatTaxValue" Title="VAT Value" />
             <RadzenDataGridColumn TItem="InvoiceIncomeDTO" Property="ValueBrutto" Title="Brutto" />
             <RadzenDataGridColumn TItem="InvoiceIncomeDTO" Property="CurrencyCode" Title="Currency" />
+            <RadzenDataGridColumn Width="50px" TItem="InvoiceIncomeDTO" Filterable="false" Title="">
+                <Template Context="ct">
+                    <RadzenButton Icon="edit" Size="ButtonSize.Small"
+                    Click="@(args => EditInvoice(ct))"
+                    Style="margin-right: 0.5rem;" />
+                </Template>
+            </RadzenDataGridColumn>
+
+            <RadzenDataGridColumn Width="50px" TItem="InvoiceIncomeDTO" Filterable="false" Title="">
+                <Template Context="ct">
+                    <RadzenButton Icon="delete" Size="ButtonSize.Small"
+                    Click="@(args => DeleteInvoice(ct))"
+                    Style="margin-right: 0.5rem;" />
+                </Template>
+            </RadzenDataGridColumn>
+
+            <RadzenDataGridColumn Width="50px" TItem="InvoiceIncomeDTO" Filterable="false" Title="">
+                <Template Context="ct">
+                    <RadzenButton Icon="repeat" Size="ButtonSize.Small"
+                    Click="@(args => MakeRecurring(ct))"
+                    Style="margin-right: 0.5rem;" />
+                </Template>
+            </RadzenDataGridColumn>
         </Columns>
     </RadzenDataGrid>
 </RadzenCard>
@@ -79,6 +112,8 @@
     private List<InvoiceTaxRateDTO> vatTaxRates = new();
     private List<int?> vatTaxValues = new();
     private InvoiceIncomeDTO newIncome = new();
+
+    private bool isEditMode = false;
 
     private List<VatDropdownItem> vatDropdownItems => vatTaxRates
     .Select(x => new VatDropdownItem
@@ -123,27 +158,60 @@
     }
     private async Task AddInvoiceIncome()
     {
-        // Retrieve VAT percentage from selected ID
         decimal selectedVatRate = (decimal)newIncome.VatTaxRate;
 
-        // Ensure Quantity and Price are valid
-        if (newIncome.Quantity > 0 && newIncome.PriceNetto > 0)
+        if(newIncome.Id > 0)
         {
             newIncome.ValueNetto = newIncome.Quantity * newIncome.PriceNetto;
-
-            // Calculate VAT value and Brutto
             newIncome.VatTaxValue = newIncome.ValueNetto * (newIncome.VatTaxRate / 100);
             newIncome.ValueBrutto = newIncome.ValueNetto + newIncome.VatTaxValue;
+
+            await ApiServiceInvoice.PutResource("/api/InvoiceIncome/Update", newIncome);
         }
         else
         {
-            newIncome.ValueNetto = 0;
-            newIncome.VatTaxRate = 0;
-            newIncome.ValueBrutto = 0;
+            if (newIncome.Quantity > 0 && newIncome.PriceNetto > 0)
+            {
+                newIncome.ValueNetto = newIncome.Quantity * newIncome.PriceNetto;
+                newIncome.VatTaxValue = newIncome.ValueNetto * (newIncome.VatTaxRate / 100);
+                newIncome.ValueBrutto = newIncome.ValueNetto + newIncome.VatTaxValue;
+            }
+            else
+            {
+                newIncome.ValueNetto = 0;
+                newIncome.VatTaxRate = 0;
+                newIncome.ValueBrutto = 0;
+            }
+
+            await ApiServiceInvoice.PostResource("/api/InvoiceIncome/Create", newIncome);
         }
 
-        await ApiServiceInvoice.PostResource("/api/InvoiceIncome/Create", newIncome);
+        
         InitNewIncome();
         await LoadData();
+    }
+
+    private void EditInvoice(InvoiceIncomeDTO cost)
+    {
+        newIncome = cost;
+        isEditMode = true;
+    }
+
+    private void CancelEdit()
+    {
+        InitNewIncome(); // lub stwórz nowy obiekt InvoiceIncomeDTO
+        isEditMode = false;
+    }
+
+    private async Task DeleteInvoice(InvoiceIncomeDTO cost)
+    {
+        await ApiServiceInvoice.DeleteResource($"/api/InvoiceCost/Delete/{cost.Id}");
+        await LoadData();
+    }
+
+    private void MakeRecurring(InvoiceIncomeDTO cost)
+    {
+        // Tu dodaj logikę do oznaczenia faktury jako cyklicznej (lub przekierowanie itp.)
+        Console.WriteLine($"Make recurring for: {cost.Name}");
     }
 }
