--- a/OMPWebApp/Components/App.razor
+++ b/OMPWebApp/Components/App.razor
@@ -17,6 +17,7 @@
     <Routes @rendermode=RenderMode.InteractiveServer />
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
+    <script src="js/downloadHelper.js"></script>
 </body>
 
 </html>
